# E-commerce-Project-with-Fast-API

./: compose.yaml
inventory_service/: Dockerfile  pyproject.toml
inventory_service/app/: inventory.proto  main.py  settings.py
inventory_service/app/controllers/: inventory_controllers.py  location_controllers.py
inventory_service/app/db/: db_connectivity.py
inventory_service/app/kafka/: consumers.py  producres.py
inventory_service/app/models/: inventory_model.py
inventory_service/app/routes/: inventory_routers.py  location_routers.py
notification_service/: Dockerfile
notification_service/app/: main.py  notification.proto  settings.py
notification_service/app/controllers/: notification_controllers.py
notification_service/app/db/: db_connectivity.py
notification_service/app/kafka/: consumers.py
notification_service/app/models/: notification_models.py
notification_service/app/routes/: notification_routes.py
order_service/: Dockerfile  pyproject.toml
order_service/app/: main.py  order.proto
order_service/app/controllers/: order_item_controllers.py  orders_controllers.py  shipment_controllers.py
order_service/app/kafka/: consumers.py  notification_consumer.py  producers.py
order_service/app/models/: orders_models.py
order_service/app/routes/: order_item_routes.py  order_routes.py  shipmint_routes.py
payment_service/: Dockerfile  pyproject.toml
payment_service/app/: main.py  settings.py
payment_service/app/controllers/: payment_controllers.py
payment_service/app/db/: db_connectivity.py
payment_service/app/models/: transection_model.py
payment_service/app/routes/: transection_routes.py
product_service/: Dockerfile  pyproject.toml
product_service/app/: inventory_pb2.py  main.py  order_pb2.py  product.proto  product_pb2.py
product_service/app/controllers/: auth_admin_controllers.py  category_controllers.py  (+3 more)
user_service/: Dockerfile  pyproject.toml
user_service/app/: main.py  notification_pb2.py  settings.py  user.proto  user_pb2.py
user_service/app/controllers/: admin_auth.py  auth_controllers.py  users_controllers.py
user_service/app/db/: db_connectivity.py
user_service/app/kafka/: notification_consumer.py  order_consumer.py  user_consumers.py  user_producers.py
user_service/app/models/: admin_models.py  user_models.py
user_service/app/routes/: admin_routes.py  user_routes.py
(+5 files in other folders)
