[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Nasir Abbas <akhtarabbas.islamicreaction@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlmodel = "^0.0.22"
aiokafka = "^0.11.0"
psycopg = {extras = ["binary"], version = "^3.2.2"}
protobuf = "^5.28.2"
psycopg2-binary = "^2.9.9"
types-protobuf = "^5.28.0.20240924"
pytest-asyncio = "^0.24.0"
passlib = "^1.7.4"
python-dotenv = "^1.0.1"
azure-eventhub = "^5.12.1"
azure-eventhub-checkpointstoreblob-aio = "^1.1.4"
stripe = "^10.12.0"
types-stripe = "^3.5.2.20240106"


[tool.poetry.scripts]
dev= "app.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
